small fix: toast z-index

--- a/src/style/component/toast.css
+++ b/src/style/component/toast.css
@@ -35,6 +35,7 @@
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
+    z-index: 9999;
 }
 
 .toast__container {
